 in a findFirst/find operation is created
 - Added Phalcon\Mvc\Collection::summatory easing the generation of this type of aggregation
 - Support for boolean literals in PHQL
 - Support for complex expressions in GROUP BY clauses in PHQL
 - Now PHQL exceptions include the PHQL statement itself
 - Aliases for namespaces are now supported in PHQL

1.1.0
 - Improvements to the query builder allowing to define bound parameters in the "where" methods
 - Added Mvc\Model\Query\Builder::inWhere to append an IN expression to the query
 - Added Mvc\Model\Query\Builder::notInWhere to append a NOT IN expression to the query
 - Added Mvc\Model\Query\Builder::betweenWhere to append a BETWEEN expression to the query
 - Now Phalcon\Session\Bag injects automatically the default DI if one hasn't beed manually assigned
 - Added Phalcon\Forms\Manager to reference forms and retrieve them from any part of the application
 - If an element in Phalcon\Forms doesn't have a label defined now returns the element's name as label
 - Now if a validator in Phalcon\Validator has defined the option 'cancelOnFail' => true the validation
 will be aborted if the validator fails
 - Added Phalcon\Validation\Validator\Between to check a value between a range of two values
 - Added Phalcon\Validation\Validator\Confirmation to check that a value match its confirmation value (another attribute in the data to validate)
 - Phalcon\Forms\Form now extends from Phalcon\DI\Injectable allowing developers to use application services in the form initialization
 - Now calls to Phalcon\Mvc\Router can be chained
 - Phalcon\Mvc\Router::getRewriteUri is now public
 - Added Phalcon\Mvc\Router\Route::beforeMatch to implement arbitrary conditions to unmatch a matched route
 - Phalcon\Mvc\Model can be now set up to throw an exception when the saving process fails
 - Added Phalcon\Assets component to manage CSS/Javascripts resources in an application