@@ -220,25 +220,7 @@ extern int phalcon_fetch_parameters(int grow_stack, int num_args TSRMLS_DC, int 
 
 /** Get the current hash key without copying the hash key */
 #define PHALCON_GET_HKEY(var, hash, hash_position) \
-	phalcon_get_current_key(&var, hash, &hash_position TSRMLS_DC);
-
-/*#define PHALCON_GET_HKEY(var, hash, hash_pointer) \
-	{\
-		int hash_type; \
-		char *hash_index; \
-		uint hash_index_len; \
-		ulong hash_num; \
-		 \
-		PHALCON_INIT_NVAR_PNULL(var); \
-		hash_type = zend_hash_get_current_key_ex(hash, &hash_index, &hash_index_len, &hash_num, 0, &hash_pointer); \
-		if (hash_type == HASH_KEY_IS_STRING) { \
-			ZVAL_STRINGL(var, hash_index, hash_index_len - 1, 0); \
-		} else { \
-			if (hash_type == HASH_KEY_IS_LONG) { \
-				ZVAL_LONG(var, hash_num); \
-			}\
-		}\
-	}*/
+	phalcon_get_current_key(&var, hash, &hash_position TSRMLS_CC);
 
 /** Get current hash key copying the hash_value if needed */
 #define PHALCON_GET_HMKEY(var, hash, hash_pointer) \
@@ -262,8 +244,6 @@ extern int phalcon_fetch_parameters(int grow_stack, int num_args TSRMLS_DC, int 
 			}\
 		}\
 	}
-
-#define PHALCON_FREE_HKEY(var) if (var) { if (Z_REFCOUNT_P(var) <= 1) { ZVAL_NULL(var); } else { zval_copy_ctor(var); } }
 
 /** Foreach */
 #define PHALCON_GET_FOREACH_KEY(var, hash, hash_pointer) PHALCON_GET_HMKEY(var, hash, hash_pointer)
