@@ -44,6 +44,7 @@
  - Support for complex expressions in GROUP BY clauses in PHQL
  - Now PHQL exceptions include the PHQL statement itself
  - Aliases for namespaces are now supported in PHQL
+ - Acl\Memory was rewritted to make it simpler and faster
 
 1.1.0
  - Improvements to the query builder allowing to define bound parameters in the "where" methods
